# sixth-degree-upgrade

./: .gitignore  README.md  docker-compose.yml  env.example
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  seed_names.txt
backend/app/api/: __init__.py  cleanup.py  deps.py  health.py  people.py  seed.py  ws.py
backend/app/core/: redis_client.py  settings.py
backend/app/db/: models.py  session.py
backend/app/repositories/: edges_repo.py  nodes_repo.py
backend/app/services/: path_service.py  people_service.py
backend/app/wiki/: __init__.py  client.py  person_detector.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: NetworkVisualization.tsx  SearchBar.tsx  SearchLog.tsx  SearchableDropdown.tsx
kong/: kong.yml
