[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sixth-degree-py-backend"
version = "0.1.0"
description = "Sixth Degree backend: FastAPI + Postgres + Celery daily Wikipedia sync"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.2",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
  "celery>=5.4.0",
  "redis>=5.0.4",
]

[tool.uvicorn]
factory = false

